# learn-cmake

./: CMakeLists.txt  README.md
core/: CMakeLists.txt
core/lib/converter/: CMakeLists.txt  Converter.cpp  Converter.h
core/src/: TutorialConfig.h.in  main.cpp
